fix: 优化代码